--- a/segundo.html
+++ b/segundo.html
@@ -4,18 +4,18 @@
 
 
 <head>
-    <title>Meu site</title>
+    <title>mercado, RPG</title>
 </head>
 
 <BODY>
 
     <h1>loja</h1>
-<p>Materiais</p>
+    <div2><p>Materiais</p></div2>
 
 <Div><img src="https://i.pinimg.com/474x/34/02/13/34021304903fd52127d6f006981c16e0.jpg" alt="Rubi" >
 
-    <p>Ruby $1000</p>
-<var></var>
+    <div3><p >Ruby $1000</p></div3>
+
 </Div>
 
 </BODY>
